<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyerSplash</string>
    <string name="settings_title">SETTINGS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <string name="settings_credit_content">Photos are from Unsplash, an amazing website providing free high-resolution photos.</string>
    <string name="settings_saving_quality">Saving quality</string>
    <string name="settings_loading_quality">Loading quality in list</string>
    <string name="settings_clean_up_cache">Clean up cache</string>

    <string name="settings_quick_download">Show download button in list</string>
    <string name="settings_quick_download_title">Quick download</string>

    <string name="settings_download_metered">Always download via metered network</string>
    <string name="settings_download_metered_title">Metered network setting</string>

    <string name="settings_recommendation_title">Show today</string>
    <string name="settings_recommendation_content">Update everyday</string>

    <string name="image_desc">Desc</string>

    <string name="settings_saving_highest">Raw</string>
    <string name="settings_saving_high">High (Default)</string>
    <string name="settings_saving_medium">Medium (Not recommended)</string>

    <string name="settings_loading_large">Large (Recommended)</string>
    <string name="settings_loading_small">Small</string>
    <string name="settings_loading_thumb">Thumbnail</string>

    <string name="authorities">com.juniperphoton.myersplash.fileProvider</string>
    <string name="feedback_str">I have an idea</string>
    <string name="credit">CREDIT</string>
    <string name="feedback">FEEDBACK</string>
    <string name="telegram_bot">TELEGRAM BOT</string>
    <string name="give_me_a_rate">Give me a rate</string>
    <string name="like_this_app">LIKE THIS APP</string>
    <string name="myer">Myer</string>
    <string name="splash">Splash</string>
    <string name="for_windows_amp_android"><![CDATA[for Windows 10 & Android & Telegram Bot]]></string>
    <string name="search">SEARCH PHOTOS</string>
    <string name="searchLowercase">Search</string>
    <string name="downloadLowercase">Downloads</string>
    <string name="random">Random</string>

    <string name="search_in_english">Search in English</string>
    <string name="no_item">NO ITEMS</string>
    <string name="search_by_other_keywords">SEARCH BY OTHER KEYWORDS</string>
    <string name="return_to_content">RETURN TO %s</string>
    <string name="set_as_wallpaper">EDIT AND SET AS</string>
    <string name="end">END</string>
    <string name="search_action">android.myersplash.action.search</string>
    <string name="random_action">android.myersplash.action.search</string>
    <string name="buy_me_a_drink">Treat me a drink via Alipay</string>
    <string name="launch_telegram_bot">Launch Telegram Bot</string>
    <string name="downloads">DOWNLOADS</string>eat
    <string name="no_downloads">NO DOWNLOADS</string>
    <string name="cleanup_downloads_list">Clean up downloads list</string>
    <string name="the_will_only_clear_the_list_in_app">The will only clear the list in app</string>
    <string name="zero_size">0 MB</string>
    <string name="clear_options">CLEAR OPTIONS</string>
    <string name="personalization">PERSONALIZATION</string>
    <string name="quality">QUALITY</string>

    <string name="saved">Saved :D</string>
    <string name="tap_to_open_manage">Tap to manage your wallpapers</string>
    <string name="download_error">Download error :(</string>
    <string name="download_error_retry">Please check your network and retry.</string>
    <string name="retry_act">RETRY</string>
    <string name="clear_options_title">CLEAR OPTIONS</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="cancelled_download">Download has been cancelled</string>
    <string name="downloading">Downloading…</string>
    <string name="completed">Completed</string>
    <string name="no_permission">No permission to write file into external storage.</string>
    <string name="attention">ATTENTION</string>
    <string name="wifi_attention_content">You are using metered network. Continue to download?</string>
    <string name="download">DOWNLOAD</string>
    <string name="downloading_in_background">Downloading in background</string>
    <string name="something_wrong">Something went wrong :-(</string>
    <string name="copy_url">COPY URL</string>
    <string name="failed_to_download">Failed to download :(</string>
    <string name="uh_oh">Uh oh :-(</string>
    <string name="no_items_please_try_again">No items. Please try again.</string>
    <string name="retry">RETRY</string>
    <string name="downloads_title">DOWNLOADS</string>
    <string name="thanks_to">THANKS TO</string>
    <string name="contribute_your_code">Contribute your code</string>
    <string name="follow_me_on_twitter">Follow me on Twitter</string>

    <string name="alipay_url_code">aex09127b4dbo4o7fbvcyb0</string>
    <string name="official_web_url">http://juniperphoton.net/myersplash</string>
    <string name="email_url">dengweichao@hotmail.com</string>
    <string name="github_url">https://github.com/JuniperPhoton/MyerSplashAndroid</string>
    <string name="twitter_url">https://twitter.com/juniperphoton</string>
    <string name="weibo_url">
        https://weibo.com/photon
    </string>
    <string name="dim_the_brightness">DIM THE BRIGHTNESS</string>

    <string name="oom_toast">Out of memory occurs. Please contact the develop to solve this. :(</string>

    <string name="failed_to_send_request">Failed to communicate with backend :(</string>
    <string name="timeout">Request timeout :(</string>

    <string name="photo_by">photo by</string>
    <string name="recommended_by">recommended by</string>
    <string name="author_default_name">JuniperPhoton</string>
    <string name="loading">Loading…</string>
    <string name="recommended_tag">TODAY</string>
    <string name="copied_tag">COPIED :D</string>
</resources>
